@@ -1,6 +1,6 @@
+from ..__spi__ import BoxFilterSizeConfig
 from .__spi__ import (
     BBoxConfig,
-    BoxFilterSizeConfig,
     OcrConfig,
     ParsedPDF,
     PDFParserConfig,
