@@ -14,6 +14,7 @@
 * add `OcrConfig`
 * add `strategy` in `OcrConfig`
 * add `only_full_page` in `OcrConfig`
+* add `image_filter_box_size` in `DocxParserConfig`
 
 ## v0.4.0
 
